[gd_scene load_steps=5 format=3 uid="uid://clkawf7n1yg00"]

[ext_resource type="Script" uid="uid://b5nwg3t2jg7hg" path="res://Scripts/GUI/settings_menu.gd" id="1_wlny4"]
[ext_resource type="Script" uid="uid://dmv4rk7w3kfvj" path="res://Scripts/GUI/controls_menu.gd" id="2_l3qjt"]
[ext_resource type="Script" uid="uid://drrgih27ydn85" path="res://Scripts/GUI/controls_button.gd" id="3_04xhd"]

[sub_resource type="LabelSettings" id="LabelSettings_wlny4"]
font_color = Color(1, 0.196078, 0, 1)

[node name="SettingsMenu" type="Window"]
process_mode = 3
oversampling_override = 1.0
title = "Settings"
initial_position = 1
size = Vector2i(400, 300)
visible = false
script = ExtResource("1_wlny4")

[node name="VSync" type="Button" parent="."]
offset_left = 1.0
offset_top = 1.0
offset_right = 99.0
offset_bottom = 32.0
text = "vsync: STAT"

[node name="DebugMode" type="Button" parent="."]
offset_left = 1.0
offset_top = 128.0
offset_right = 151.0
offset_bottom = 159.0
text = "DebugMode: False"

[node name="Label" type="Label" parent="DebugMode"]
layout_mode = 0
offset_top = -100.0
offset_right = 407.0
offset_bottom = 1.0
text = "WARNING!! Turning on Debug Mode disables
achievements and stops you from saving, make
sure to SAVE before turning on this mode if you
dont want to lose progress!"
label_settings = SubResource("LabelSettings_wlny4")

[node name="Label2" type="Label" parent="DebugMode"]
layout_mode = 0
offset_top = 32.0
offset_right = 271.0
offset_bottom = 83.0
text = "B - spawn bouncy onurb
Ctrl + B - remove all bouncy onurbs"

[node name="MaxFPS" type="LineEdit" parent="."]
offset_left = 245.0
offset_top = 1.0
offset_right = 398.0
offset_bottom = 32.0
placeholder_text = "MaxFPS: FUCK"

[node name="ControlsMenu" type="Window" parent="."]
oversampling_override = 1.0
title = "Controls"
initial_position = 1
size = Vector2i(500, 300)
visible = false
script = ExtResource("2_l3qjt")

[node name="FencyUp" type="Button" parent="ControlsMenu"]
offset_left = 1.0
offset_top = 27.0
offset_right = 54.0
offset_bottom = 73.0
text = "Up: "
script = ExtResource("3_04xhd")

[node name="FencyLeft" type="Button" parent="ControlsMenu"]
offset_left = 1.0
offset_top = 74.0
offset_right = 54.0
offset_bottom = 120.0
text = "Left: "
script = ExtResource("3_04xhd")
keybind = "FencyLeft"

[node name="FencyRight" type="Button" parent="ControlsMenu"]
offset_left = 1.0
offset_top = 121.0
offset_right = 54.0
offset_bottom = 167.0
text = "Right:"
script = ExtResource("3_04xhd")
keybind = "FencyRight"

[node name="FencyCam" type="Button" parent="ControlsMenu"]
offset_left = 1.0
offset_top = 168.0
offset_right = 54.0
offset_bottom = 214.0
text = "Cam:"
script = ExtResource("3_04xhd")
keybind = "FencyCam"

[node name="ToastyJump" type="Button" parent="ControlsMenu"]
offset_left = 155.0
offset_top = 27.0
offset_right = 208.0
offset_bottom = 73.0
text = "Up:"
script = ExtResource("3_04xhd")
keybind = "ToastyJump"

[node name="ToastyLeft" type="Button" parent="ControlsMenu"]
offset_left = 155.0
offset_top = 74.0
offset_right = 208.0
offset_bottom = 120.0
text = "Left:"
script = ExtResource("3_04xhd")
keybind = "ToastyLeft"

[node name="ToastyRight" type="Button" parent="ControlsMenu"]
offset_left = 155.0
offset_top = 121.0
offset_right = 208.0
offset_bottom = 167.0
text = "Right:"
script = ExtResource("3_04xhd")
keybind = "ToastyRight"

[node name="ToastyCam" type="Button" parent="ControlsMenu"]
offset_left = 155.0
offset_top = 168.0
offset_right = 208.0
offset_bottom = 214.0
text = "Cam:"
script = ExtResource("3_04xhd")
keybind = "ToastyCam"

[node name="PanLoduwkaJump" type="Button" parent="ControlsMenu"]
offset_left = 316.0
offset_top = 27.0
offset_right = 369.0
offset_bottom = 73.0
text = "Up:"
script = ExtResource("3_04xhd")
keybind = "PanLoduwkaJump"

[node name="PanLoduwkaLeft" type="Button" parent="ControlsMenu"]
offset_left = 316.0
offset_top = 74.0
offset_right = 369.0
offset_bottom = 120.0
text = "Left:"
script = ExtResource("3_04xhd")
keybind = "PanLoduwkaLeft"

[node name="PanLoduwkaRight" type="Button" parent="ControlsMenu"]
offset_left = 316.0
offset_top = 121.0
offset_right = 369.0
offset_bottom = 167.0
text = "Right:"
script = ExtResource("3_04xhd")
keybind = "PanLoduwkaRight"

[node name="PanLoduwkaCam" type="Button" parent="ControlsMenu"]
offset_left = 316.0
offset_top = 168.0
offset_right = 369.0
offset_bottom = 214.0
text = "Cam:"
script = ExtResource("3_04xhd")
keybind = "PanLoduwkaCam"

[node name="Fency" type="Label" parent="ControlsMenu"]
offset_left = 1.0
offset_top = 1.0
offset_right = 46.0
offset_bottom = 24.0
text = "Fency"

[node name="Toasty" type="Label" parent="ControlsMenu"]
offset_left = 155.0
offset_top = 1.0
offset_right = 206.0
offset_bottom = 24.0
text = "Toasty"

[node name="PanLoduwka" type="Label" parent="ControlsMenu"]
offset_left = 316.0
offset_top = 1.0
offset_right = 420.0
offset_bottom = 24.0
text = "Pan Loduwka"

[node name="Controls" type="Button" parent="."]
offset_left = 304.0
offset_top = 124.0
offset_right = 398.0
offset_bottom = 159.0
text = "Controls
"

[node name="SFX" type="Label" parent="."]
offset_top = 232.0
offset_right = 40.0
offset_bottom = 255.0
text = "SFX"

[node name="HSlider" type="HSlider" parent="SFX"]
layout_mode = 0
offset_top = 25.0
offset_right = 110.0
offset_bottom = 61.0
min_value = -80.0
max_value = 20.0

[node name="Music" type="Label" parent="."]
offset_left = 248.0
offset_top = 232.0
offset_right = 288.0
offset_bottom = 255.0
text = "Music"

[node name="HSlider" type="HSlider" parent="Music"]
layout_mode = 0
offset_top = 22.0
offset_right = 110.0
offset_bottom = 58.0
min_value = -80.0
max_value = 20.0

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="VSync" to="." method="_on_vsync_pressed"]
[connection signal="pressed" from="DebugMode" to="." method="_on_debug_mode_pressed"]
[connection signal="text_submitted" from="MaxFPS" to="." method="_on_max_fps_text_submitted"]
[connection signal="close_requested" from="ControlsMenu" to="ControlsMenu" method="_on_close_requested"]
[connection signal="pressed" from="ControlsMenu/FencyUp" to="ControlsMenu/FencyUp" method="_on_pressed"]
[connection signal="pressed" from="ControlsMenu/FencyLeft" to="ControlsMenu/FencyLeft" method="_on_pressed"]
[connection signal="pressed" from="ControlsMenu/FencyRight" to="ControlsMenu/FencyRight" method="_on_pressed"]
[connection signal="pressed" from="ControlsMenu/FencyCam" to="ControlsMenu/FencyCam" method="_on_pressed"]
[connection signal="pressed" from="ControlsMenu/ToastyJump" to="ControlsMenu/ToastyJump" method="_on_pressed"]
[connection signal="pressed" from="ControlsMenu/ToastyLeft" to="ControlsMenu/ToastyLeft" method="_on_pressed"]
[connection signal="pressed" from="ControlsMenu/ToastyRight" to="ControlsMenu/ToastyRight" method="_on_pressed"]
[connection signal="pressed" from="ControlsMenu/ToastyCam" to="ControlsMenu/ToastyCam" method="_on_pressed"]
[connection signal="pressed" from="ControlsMenu/PanLoduwkaJump" to="ControlsMenu/PanLoduwkaJump" method="_on_pressed"]
[connection signal="pressed" from="ControlsMenu/PanLoduwkaLeft" to="ControlsMenu/PanLoduwkaLeft" method="_on_pressed"]
[connection signal="pressed" from="ControlsMenu/PanLoduwkaRight" to="ControlsMenu/PanLoduwkaRight" method="_on_pressed"]
[connection signal="pressed" from="ControlsMenu/PanLoduwkaCam" to="ControlsMenu/PanLoduwkaCam" method="_on_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
